Task-5/brc-chart/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/docker-carrental-net: "true"
        io.kompose.service: app
    spec:
      containers:
        - name: brc-backend
          image: 058264318400.dkr.ecr.us-east-1.amazonaws.com/brc-eks-repo:backend
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
      restartPolicy: Always
