Task-5/brc-chart/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/docker-carrental-net: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: carrental
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: techprodb_user
          image: 058264318400.dkr.ecr.us-east-1.amazonaws.com/brc-eks-repo:postgre
          name: postgres
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
      restartPolicy: Always
