Task-5/brc-chart/templates/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-basic
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  template:
    metadata:
      labels:
        io.kompose.service: ui
    spec:
      containers:
        - env:
            - name: REACT_APP_API_URL
              value: http://carrental.benfarmet.com:8080/car-rental/api/
          image: 058264318400.dkr.ecr.us-east-1.amazonaws.com/brc-eks-repo:frontend
          name: brc-frontend
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
