Task-5/brc-chart/templates/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-basic
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: app
