Task-5/brc-chart/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ingress-basic
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
