Task-5/brc-chart/templates/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: ingress-basic
  labels:
    io.kompose.service: ui
  name: ui
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: ui
  type: ClusterIP
