Task-5/brc-chart/templates/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: ingress-basic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: carrental.benfarmet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui
                port: 
                  number: 3000
          - path: /car-rental/api/
            pathType: Prefix
            backend:
              service:
                name: app
                port: 
                  number: 8080
